feat: refactor Dockerfile with slim arch